--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,13 @@ plugins {
 mainClassName = 'MainApp'
 group 'org.example'
 version '1.0-SNAPSHOT'
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'org.json:json:20201115'
 }
 
 javafx {
